...
                            android:layout_height="20dp"
                            android:src="@drawable/baseline_keyboard_arrow_down_24"
                            app:tint="@color/text_secondary"
                            android:importantForAccessibility="no" />
                    </LinearLayout>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/altitude_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="80.0米"
                        android:textColor="@color/primary"
                        android:textSize="14sp" />
                    <com.google.android.material.textview.MaterialTextView
...
                            android:layout_height="20dp"
                            android:src="@drawable/baseline_keyboard_arrow_down_24"
                            app:tint="@color/text_secondary"
                            android:importantForAccessibility="no" />
                    </LinearLayout>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/accuracy_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="25.0米"
                        android:textColor="@color/primary"
                        android:textSize="14sp" />
                    <com.google.android.material.textview.MaterialTextView
...
